Another tough update

--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -144,7 +144,8 @@
 .theme-dark .wrapper-1ucjTd.modeUnread-1zpFdA .content-3at_AU {
    background-color: rgba(231, 254, 255,0.2);  /* (Main Color, 0.2) */
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background-color: rgba(206, 233, 234,0.5); /* (Hover Color, 0.6) */
     margin-left: 15px;
 }
@@ -437,7 +438,7 @@
 
 .theme-dark .message-group a,
 .theme-dark .embedTitleLink-1Zla9e,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .anchor-3Z-8Bb,
 a {
     color: #ab9ee5 !important;
