--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -231,7 +231,7 @@
     box-shadow: 0 0 0 2px #A87E56, inset 0 0 0 2px black;
 }
 a,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .marginLeft8-1YseBe,
 .theme-dark .markup-2BOw-j a,
 .need-help-modal.deprecated a,
@@ -269,7 +269,7 @@ a,
     background-color: rgba(168, 126, 86,0.28);
     color: #EFD9C3;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU:active {
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU {
     background-color: rgba(168, 126, 86,0.28);
 }
 
@@ -299,7 +299,8 @@ a,
     left: -27px;
     position: relative;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background-color: rgba(168, 126, 86,.6);
     border-radius: 50px;
 }
