--- a/Theme_Group_2/Danganronpa.theme.css
+++ b/Theme_Group_2/Danganronpa.theme.css
@@ -45,7 +45,7 @@
     font-weight: normal;
     border-radius: 0px;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU{
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU {
     background: rgba(80, 136, 163,.7);
     font-weight: normal;
     border-radius: 0px;
@@ -91,7 +91,8 @@
 .wrapper-CU3qI5 {
     color: #5088A3;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU:active {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background: rgba(142, 194, 194,.5);
     font-weight: normal;
     border-radius: 0px;
@@ -254,7 +255,7 @@ color: rgba(255,255,255,0.3);
     border: 1px solid rgba(255,255,255,0.23);
 }
 .theme-dark .message-group a,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .content-8biNdB a,
 .emptyStateCTA-veJ2Cu a,
 .standardSidebarView-3F1I7i a,
