--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -269,7 +269,7 @@
 .bda-slist .bda-footer a,
 .standardSidebarView-3F1I7i a,
 .theme-dark .welcomeMessage-3_Mcht a,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .theme-dark .markup-2BOw-j a {
   color: #546de5;
 }
@@ -867,15 +867,15 @@
   font-weight: 300;
 }
 
-.contentConnectedVoice-qL-YrL:active,
+
 .theme-dark .wrapper-1ucjTd:hover .content-3at_AU, .theme-dark .listDefault-2y5Z9D .clickable-23RaYz:hover .content-3xS9Lh,
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU,
 .contentSelectedVoice-1WDIBM:active {
   background-color: rgba(255, 255, 255, 0.13);
   border: 2px solid rgba(255, 255, 255, 0.23);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU{
   background-color: rgba(255, 255, 255, 0.33);
   border: 2px solid rgba(255, 255, 255, 0.43);
 }
