--- a/Theme_Group_3/Kitty_Cat_Love.theme.css
+++ b/Theme_Group_3/Kitty_Cat_Love.theme.css
@@ -324,15 +324,11 @@
     padding-top: 5px;
     padding-bottom: 9px;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
     background-color: rgba(104,107,178,0.36);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
-    background-color: rgba(104,107,178,0.36);
-    padding-top: 5px;
-    padding-bottom: 9px;
-}
 .content-3at_AU {
     border-radius: 7px;
     overflow: visible;
@@ -601,7 +597,7 @@
     background-color: black !important;
     color: white !important;
 }
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .theme-dark .message-group a,
 .theme-dark .embedTitleLink-1Zla9e,
 .theme-dark .welcomeMessage-3_Mcht a,
