--- a/Theme_Group_4/Rem.theme.css
+++ b/Theme_Group_4/Rem.theme.css
@@ -102,7 +102,7 @@
 .theme-dark .markup-2BOw-j a,
 .content-8biNdB a,
 .operations-36ENbA>a,
-.theme-dark .topic-2QX7LI a {
+.theme-dark .topic-TCb_qw a {
    color: #1e90ff;
    opacity: 1
 }
@@ -1178,11 +1178,12 @@
     color: #ffcc66
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU{
     background-color: rgba(255,255,255,.3)
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU {
     background-color: rgba(255,255,255,.13)
 }
 
