--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -342,7 +342,7 @@
 .operations-36ENbA>a,
 .need-help-modal.form.deprecated a,
 .need-help-modal.form.deprecated a:hover,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .content-8biNdB a,
 .theme-dark .markup-2BOw-j a,
 .standardSidebarView-3F1I7i a {
@@ -689,11 +689,12 @@ color: rgba(255,255,255,0.3);
   background: linear-gradient(35deg, rgba(0,0,0,0) 80%, rgba(213,255,0,0.8) 100%);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU {
     background: linear-gradient(35deg, rgba(0,0,0,0) 80%, rgba(0,226,255,0.8) 100%);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background: linear-gradient(35deg, rgba(123,26,255,0) 60%, rgba(255,0,0,0.8) 100%, rgba(255,177,0,0.8) 100%);
 }
 
