--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -788,7 +788,7 @@
 .footerText-2a7NxZ a,
 .operations-36ENbA>a,
 .metadataName-14STf-,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .theme-dark .filenameLinkWrapper-1-14c5,
 .standardSidebarView-3F1I7i a,
 .content-8biNdB a,
@@ -1306,11 +1306,12 @@
         border-left: 3px solid #C7FF2F;
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU, .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU {
         background-color: rgba(255, 255, 255, 0.14);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
         background-color: rgba(0,0,0,.6);
         border-right: 2px solid #610809;
         border-left: 2px solid #610809;
