--- a/Theme_Group_2/Thunderstorm.theme.css
+++ b/Theme_Group_2/Thunderstorm.theme.css
@@ -45,7 +45,7 @@
     font-weight: normal;
     border-radius: 0px;
 }
- .theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU{
+.theme-dark .wrapper-1ucjTd:hover .content-3at_AU{
     background: rgba(39, 39, 41,.7);
     font-weight: normal;
     border-radius: 0px;
@@ -93,7 +93,8 @@
 .wrapper-CU3qI5 {
     color: gray;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU:active {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
     background: rgba(27, 27, 29,.5);
     font-weight: normal;
     border-radius: 0px;
@@ -256,7 +257,7 @@ color: rgba(255,255,255,0.3);
     border: 1px solid rgba(255,255,255,0.23);
 }
 .theme-dark .message-group a,
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .content-8biNdB a,
 .emptyStateCTA-veJ2Cu a,
 .standardSidebarView-3F1I7i a,
