--- a/Theme_Group_3/Gumi.theme.css
+++ b/Theme_Group_3/Gumi.theme.css
@@ -322,15 +322,11 @@
     padding-top: 5px;
     padding-bottom: 9px;
 }
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU {
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_:hover .content-3at_AU,
+.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
     background-color: rgba(142, 165, 75,0.36);
 }
 
-.theme-dark .wrapper-1ucjTd.modeSelected-1zApJ_ .content-3at_AU {
-    background-color: rgba(142, 165, 75,0.36);
-    padding-top: 5px;
-    padding-bottom: 9px;
-}
 .messageGroupCozy-2iY6cT .avatar-17mtNa .large-3ChYtB {
     margin-left: -7px;
     margin-top: -7px;
@@ -598,7 +594,7 @@
     background-color: black !important;
     color: white !important;
 }
-.theme-dark .topic-2QX7LI a,
+.theme-dark .topic-TCb_qw a,
 .theme-dark .message-group a,
 .theme-dark .embedTitleLink-1Zla9e,
 .theme-dark .welcomeMessage-3_Mcht a,
