Another Update Of Course

--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -65,7 +65,7 @@
     font-weight: normal;
     border-radius: 0 0 30px 30px;
 }
-.button-2b6hmh:hover {
+.button-s03oPN:hover {
     background-color: rgba(255,255,255,.3);
     opacity: 1;
     border-radius: 30px;
@@ -1315,16 +1315,16 @@ a {
     border-radius: 16px;
 }
 /* Notification Settings */
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-color: rgba(231, 254, 255,0.39);
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.46), inset 0 0 183px rgba(255,255,255,0.63);
     border-radius: 30px;
 }
-.theme-dark .separator-6YbWrc {
+.theme-dark .separator-2pYyx- {
     box-shadow: none;
 }
 .theme-dark .select-2TCrqx .Select-control .Select-placeholder {
