--- a/Theme_Group_1/NoGameNoLife.theme.css
+++ b/Theme_Group_1/NoGameNoLife.theme.css
@@ -681,12 +681,12 @@
 .header-3sp3cE {
     padding: 30px 20px;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-image: linear-gradient(to top left, #4F1C4F 30%, #000000 100%);
     box-shadow: none;
     animation: bounceIn .75s both
 }
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
