--- a/Theme_Group_1/TouhouKnowledge.theme.css
+++ b/Theme_Group_1/TouhouKnowledge.theme.css
@@ -1461,14 +1461,14 @@ a,
     background-color:#705435;
 }
 /* Notification Settings */
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
 .header-3sp3cE {
     background-color: black;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-image: url(https://images2.alphacoders.com/261/26102.jpg);
     background-size: cover;
     box-shadow: none;
