--- a/Theme_Group_2/BokuNoHeroAcademia.theme.css
+++ b/Theme_Group_2/BokuNoHeroAcademia.theme.css
@@ -412,12 +412,12 @@ color: rgba(255,255,255,0.3);
   .backdrop-1ocfXc {
     background-color: rgba(0,0,0,0.3) !important;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 100%), url(https://images7.alphacoders.com/744/744312.png);
     background-size: cover;
     box-shadow: none;
 }
-  .theme-dark .footer-2yfCgX {
+  .theme-dark .footer-30ewN8 {
     background-color:  transparent;
     box-shadow: none;
 }
