--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -515,11 +515,11 @@
   margin-top: 3px;
 }
 
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
   background-color: rgba(0, 0, 0, 0.74);
 }
 
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
   background-color: transparent;
   box-shadow: none;
 }
