--- a/Theme_Group_3/Fanta.theme.css
+++ b/Theme_Group_3/Fanta.theme.css
@@ -1401,11 +1401,11 @@ a,
     border-radius: 0;
     box-shadow: none;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-color: #F99500;
     box-shadow: none;
 }
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
