--- a/Theme_Group_4/Clear_Sunset.theme.css
+++ b/Theme_Group_4/Clear_Sunset.theme.css
@@ -1307,12 +1307,12 @@
     display: none;
 }
 
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background: linear-gradient(180deg, rgba(138,40,73,0.8) 49%, rgba(0,0,0,1) 100%);
     box-shadow: none;
 }
 
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
@@ -1743,7 +1743,7 @@
 }
 
 
-.theme-dark .button-2b6hmh:hover, .theme-light .button-2b6hmh:hover {
+.theme-dark .button-s03oPN:hover, .theme-light .button-s03oPN:hover {
     background-color: rgba(138, 40, 73,.6);
     border: 2px solid #8a2849;
 }
