--- a/Theme_Group_4/Rem.theme.css
+++ b/Theme_Group_4/Rem.theme.css
@@ -399,7 +399,7 @@
    border: 2px solid #000!important
 }
 
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
    background-color: rgba(0, 0, 0, 0.79);
    box-shadow: none
 }
@@ -629,7 +629,7 @@
     color: silver
 }
 
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
