--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -217,20 +217,20 @@
    background-color: rgba(0, 0, 0, .7);
 }
 
-.theme-dark .separator-6YbWrc {
+.theme-dark .separator-2pYyx- {
    box-shadow: none;
 }
 
 .theme-dark .footer-1FPmkC,
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
    background-color: transparent;
 }
 
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
    box-shadow: none;
 }
 
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.59) 0%, rgba(0, 0, 0, 0.59) 66%), url(https://www.actaturcica.com/wp-content/uploads/2018/07/Snowy-Landscape-Winter-Trees-Wallpaper.jpg);
    box-shadow: none;
 }
@@ -301,12 +301,12 @@
    opacity: .6;
 }
 
-.theme-dark .button-2b6hmh:hover {
+.theme-dark .button-s03oPN:hover {
    background-color: rgba(224, 224, 224, .43);
    border: 1px solid rgba(224, 224, 224, .73);
 }
 
-.theme-dark .button-2b6hmh {
+.theme-dark .button-s03oPN {
    background-color: rgba(224, 224, 224, .23);
    margin-right: 3px;
    border: 1px dashed rgba(224, 224, 224, .43);
