--- a/Theme_Group_4/WonderfulLeaves.theme.css
+++ b/Theme_Group_4/WonderfulLeaves.theme.css
@@ -277,7 +277,7 @@
     background-color: rgba(255,255,255,0.15);
 }
 
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-color: rgba(97, 8, 9,0.72);
     box-shadow: none;
     border-radius: 0;
@@ -745,7 +745,7 @@
     color: white;
 }
 
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color: transparent;
     box-shadow: none;
 }
