--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -394,7 +394,7 @@
 .backdrop-1wrmKB {
     background-color: rgba(0,0,0,0.4) !important;
 }
-.theme-dark .footer-2yfCgX, 
+.theme-dark .footer-30ewN8, 
 .theme-dark .header-1R_AjF {
     background-color: transparent;
     box-shadow: none;
@@ -411,7 +411,7 @@
     background-color: rgba(91, 55, 58,.8) !important; /* RGB Hover Color */
     color: white !important;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-image: linear-gradient(to bottom, rgba(89, 59, 58,.8) 0%, #000000 100%);
     background-color: transparent;
     box-shadow: 0 0 13px 0 rgba(0,0,0,.6), 0 2px 10px 0 rgba(0,0,0,.9);
