--- a/Theme_Group_2/Thunderstorm.theme.css
+++ b/Theme_Group_2/Thunderstorm.theme.css
@@ -408,12 +408,12 @@ color: rgba(255,255,255,0.3);
     .backdrop-1ocfXc {
     background-color: rgba(0,0,0,0.3) !important;
 }
-.theme-dark .modal-3HD5ck {
+.theme-dark .modal-3v8ziU {
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.3) 100%), url(https://images8.alphacoders.com/723/723889.jpg);
     background-size: cover;
     box-shadow: none;
 }
-.theme-dark .footer-2yfCgX {
+.theme-dark .footer-30ewN8 {
     background-color:  transparent;
     box-shadow: none;
 }
