Added one more code

--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1893,6 +1893,11 @@
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
   background-image: linear-gradient(0deg,transparent,transparent 1px,#6670ED 0,#6670ED 2px,transparent 0);
 }
+.welcomeMessage-3_Mcht .h1-1IDj26,
+.welcomeMessage-3_Mcht p {
+  color: white;
+}
+
 /* ---- */
 
 .standardSidebarView-3F1I7i #editor-detached button {
