--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -1902,6 +1902,11 @@
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #789dbf;
 }
+.theme-dark .expandedFolderBackground-2sPsd-, 
+.theme-dark .folder-21wGz3 {
+  background-color: rgba(0,0,0,0.4);
+	border-radius: 0;
+}
 
 /* RANDOM COLORS with BLACK OPACITY */
 /* Main Color: Black with Opacity */
