--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1904,6 +1904,11 @@
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #129b1a;
 }
+.theme-dark .expandedFolderBackground-2sPsd-, 
+.theme-dark .folder-21wGz3 {
+  background-color: rgba(0,0,0,0.4);
+	border-radius: 0;
+}
 
 
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
