--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1903,7 +1903,11 @@
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #ca9e73;
 }
-
+.theme-dark .expandedFolderBackground-2sPsd-, 
+.theme-dark .folder-21wGz3 {
+  background-color: rgba(0,0,0,0.4);
+	border-radius: 0;
+}
 
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #ca9e73 - 202, 159, 115 */
