--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1887,7 +1887,8 @@
 .theme-dark .container-3-pyIM .content-2M3n_H a,
 .helpText-h3r3wC a,
 .lookLink-9FtZy-.colorBrand-3pXr91,
-.emptyStateSubtext-2njjqg a {
+.emptyStateSubtext-2njjqg a,
+.theme-dark .container-2x5lvQ section a {
     color: #6670ED;
 }
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
@@ -1905,10 +1906,9 @@
 }
 .theme-dark .expandedFolderBackground-2sPsd-, 
 .theme-dark .folder-21wGz3 {
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.4) !important;
 	border-radius: 0;
 }
-
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #ca9e73 - 202, 159, 115 */
 /* Hover Color: #d59e68 - 213, 158, 104 */
