Fixed the Folder Shading

--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -1906,8 +1906,14 @@
 .theme-dark .expandedFolderBackground-2sPsd-, 
 .theme-dark .folder-21wGz3 {
   background-color: rgba(0,0,0,0.42) !important; 
+		height: 49px;
+		border-radius: 19px;
 }
-
+.folder-21wGz3, .folderIconWrapper-226oVY {
+  width: 49px;
+  height: 49px;
+		border-radius: 0px;
+}
 /* RANDOM COLORS with BLACK OPACITY */
 /* Main Color: Black with Opacity */
 /* Random Colors if Possible */
