--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1908,8 +1908,14 @@
 .theme-dark .expandedFolderBackground-2sPsd-, 
 .theme-dark .folder-21wGz3 {
   background-color: rgba(0,0,0,0.42) !important; 
+		height: 49px;
+		border-radius: 19px;
 }
-
+.folder-21wGz3, .folderIconWrapper-226oVY {
+  width: 49px;
+  height: 49px;
+		border-radius: 0px;
+}
 
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #129b1a - 18, 155, 26 */
