--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1907,6 +1907,13 @@
 .theme-dark .expandedFolderBackground-2sPsd-, 
 .theme-dark .folder-21wGz3 {
   background-color: rgba(0,0,0,0.42) !important; 
+		height: 49px;
+		border-radius: 19px;
+}
+.folder-21wGz3, .folderIconWrapper-226oVY {
+  width: 49px;
+  height: 49px;
+		border-radius: 0px;
 }
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #ca9e73 - 202, 159, 115 */
