Ugh more code adding

--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -1899,7 +1899,14 @@
 }
 
 /* ---- */
-
+.theme-dark .message-2qRu38 {
+  background-color: rgba(0,0,0,0.3);
+	border: 2px solid black;
+  box-shadow: none;
+}
+.message-2qRu38 {
+  border-radius: 9px;
+}
 .standardSidebarView-3F1I7i #editor-detached button {
   background: #789dbf;
 }
