--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1916,6 +1916,14 @@
   height: 49px;
 		border-radius: 0px;
 }
+.theme-dark .message-2qRu38 {
+  background-color: rgba(0,0,0,0.3);
+	border: 2px solid black;
+  box-shadow: none;
+}
+.message-2qRu38 {
+  border-radius: 9px;
+}
 
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #129b1a - 18, 155, 26 */
