--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1889,7 +1889,8 @@
 .helpText-h3r3wC a,
 .lookLink-9FtZy-.colorBrand-3pXr91,
 .emptyStateSubtext-2njjqg a,
-.theme-dark .container-2x5lvQ section a {
+.theme-dark .container-2x5lvQ section a,
+.colorStandard-2KCXvj a {
     color: #6670ED;
 }
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
