What's with all of the classes I keep forgetting

--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1124,7 +1124,8 @@
   background-color: rgba(0,0,0,.8);
   border: 1px solid #ca9e73;
 }
-.theme-dark .hasMore-3e72_v button {
+.theme-dark .hasMore-3e72_v button,
+.theme-dark .hasMoreButton-1MELpI  {
   background: rgba(0,0,0,.5);
   border: 1px solid black;
   color: white;
