--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -1124,7 +1124,8 @@
   background-color: rgba(0,0,0,.8);
   border: 1px solid #789dbf;
 }
-.theme-dark .hasMore-3e72_v button {
+.theme-dark .hasMore-3e72_v button,
+.theme-dark .hasMoreButton-1MELpI  {
   background: rgba(0,0,0,.5);
   border: 1px solid black;
   color: white;
