--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1125,7 +1125,8 @@
   background-color: rgba(0,0,0,.8);
   border: 1px solid #129b1a;
 }
-.theme-dark .hasMore-3e72_v button {
+.theme-dark .hasMore-3e72_v button,
+.theme-dark .hasMoreButton-1MELpI  {
   background: rgba(0,0,0,.5);
   border: 1px solid black;
   color: white;
