--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -11,7 +11,7 @@
 .theme-dark .typing-2GQL18,
 .theme-dark .messagesWrapper-3lZDfY,
 .container-PNkimc,
-.channels-Ie2l6A,
+.sidebar-2K8pFh,
 .theme-dark .wrapper-1Rf91z,
 .container-2lgZY8,
 .theme-dark .chat-3bRxxu, 
@@ -173,15 +173,18 @@
   border-radius: 9px;
 }
 
-.theme-dark .side-8zPYf6 .themed-OHr7kt.item-PXvHYJ:hover {
+.side-8zPYf6 .themed-OHr7kt.item-PXvHYJ:hover, .topPill-30KHOu .themed-OHr7kt.item-PXvHYJ:hover {
   background-color: rgba(120, 157, 191, 0.357);
+}
+.panels-j1Uci_ {
+  background-color: transparent;
 }
 
 .emptyStateCTA-veJ2Cu {
   opacity: 1;
 }
 
-.tabBar-1E2ExX .primary-3j8BhM {
+.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgb(67, 181, 129); color: rgb(255, 255, 255);"] {
   background-color: transparent!important;
   color: #fff!important;
 }
@@ -189,7 +192,7 @@
   background-color: #149300 !important;
 }
 
-.tabBar-1E2ExX .primarySelected-3uHKZn {
+.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
   background-color: #149300!important;
   color: white!important;
   border: 1px solid rgba(255, 255, 255, 0.45);
@@ -590,7 +593,7 @@
 
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-  border-bottom: none;
+  background: none;
 }
 .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
   color: silver;
@@ -610,10 +613,10 @@
 .guildSeparator-3s64Iy {
   background: transparent;
 }
-.theme-dark .button-OhfaWu {
+.theme-dark .childWrapper-anI2G9 {
   background-color: transparent;
 }
-.theme-dark .button-OhfaWu.selected-wSa2KV {
+.wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
   background-color: #789dbf;
 }
 .item-2hkk8m {
@@ -686,7 +689,7 @@
   border-radius: 7px;
 }
 
-.theme-dark.contextMenu-HLZMGh {
+.contextMenu-HLZMGh {
   background: black;
   box-shadow: none;
   border-radius: 6px;
@@ -882,6 +885,7 @@
 .root-SR8cQa {
   box-shadow: 0 7px 10px 0 rgba(0,0,0,.8);
   border-radius: 0;
+  background-color: transparent;
 }
 .theme-dark .body-3iLsc4, 
 .theme-dark .footer-1fjuF6,
@@ -984,8 +988,8 @@
 }
 .botTagInvert-18-95s,
 .botTagRegular-2HEhHi {
-  background: #789dbf;
-  color:  white;
+  background: #789dbf !important;
+  color: white !important;
   border: 2px solid rgba(0,0,0,0.4);
 }
 .theme-dark .channelTextArea-rNsIhG {
@@ -1038,7 +1042,7 @@
 /* DON'T TOUCH */
 .dividerContent-2L12VI:after, 
 .dividerContent-2L12VI:before {
-  border-bottom: none;
+  background-color: transparent !important;
 }
 /* DON'T TOUCH  */
 .mask-1l8v16 {
@@ -1077,9 +1081,9 @@
   background-color: rgba(0,0,0,0.2);
   padding-bottom: 18px;
   padding-left: 7px;
-  margin-top: 19px;
+  margin-top: 21px;
   position: relative;
-  margin-bottom: -11px;
+  margin-bottom: -6px;
   border-radius: 5px;
 }
 .buttonContainer-KtQ8wc>* {
@@ -1124,7 +1128,7 @@
   background-color: rgba(0,0,0,.8);
   border: 1px solid #789dbf;
 }
-.theme-dark .hasMore-3e72_v button,
+.hasMore-3e72_v,
 .theme-dark .hasMoreButton-1MELpI  {
   background: rgba(0,0,0,.5);
   border: 1px solid black;
@@ -1573,16 +1577,16 @@
 .theme-dark .searchResult-3pzFAB:before {
   background-image: none;
 }
-.theme-dark .memberOnline-1CIh-0 {
+.container-2Pjhx- {
   color: white;
 }
-.member-3W1lQa {
+.layout-2DM8Md {
   border-radius: 9px;
 }
-.theme-dark .member-3W1lQa:hover {
+.clickable-1JJAn8:hover .layout-2DM8Md {
   background-color: rgba(0,0,0,.3);
 }
-.theme-dark .member-3W1lQa.popout-open, .theme-dark .member-3W1lQa.popout-open:hover {
+.selected-aXhQR6 .layout-2DM8Md {
   background-color: rgba(0,0,0,.9);
   color: #789dbf;
   border: 1px solid #789dbf;
@@ -1696,10 +1700,8 @@
 .channel-2QD9_O a {
   color: silver;
 }
-.channel-2QD9_O:hover a {
-  background-color: rgba(0,0,0,0.2);
-}
-.channel-2QD9_O.selected-1HYmZZ a {
+
+.selected-aXhQR6 .layout-2DM8Md {
   background-color: rgba(0,0,0,0.5);
 }
 .name-2WpE7M {
@@ -1710,7 +1712,8 @@
   background-color: rgba(0,0,0,0.8) !important;
   border: 1px solid #789dbf;
 }
-.theme-dark .container-cMG81i {
+.theme-dark .container-cMG81i,
+.privateChannels-1nO12o {
   background-color: transparent;
 }
 .theme-dark .itemBackground-2vEldQ:before {
