--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -409,7 +409,7 @@
   border-color: transparent;
 }
 
-.theme-dark .button-mM-y8i {
+.theme-dark .button-2CgfFz {
   background-color: rgba(0,0,0,0.4) !important;
   box-shadow: none !important;
 }
