--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -33,7 +33,8 @@
 .scroller-1IIF0A,
 .theme-dark .activityFeed-1C0EmJ,
 .theme-dark .root-1BQpZw,
-.scroller-5bBood {
+.scroller-5bBood,
+.scroller-305q3I {
   background-color: transparent;
 }
 .theme-dark .container-1r6BKw {
