Small Changes Again

--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -677,6 +677,11 @@
   background-color: #789dbf;
 }
 
+ .clickable-11uBi-:hover, 
+.selected-BYpGTS {
+  background: #789dbf;
+}
+
 .theme-dark .item-1Yvehc:hover {
   background: #6f9dc8;
   color: #fff !important;
@@ -992,12 +997,16 @@
   background-color: transparent;
   box-shadow: none;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .messagesPopout-24nkyi {
+.theme-dark .messagesPopoutWrap-1MQ1bW {
   background: linear-gradient(50deg, rgba(0,0,0,0.6993172268907564) 30%, rgba(120, 157, 191,1) 100%);
   border: none;
   box-shadow: 0 7px 10px 0 rgba(0,0,0,.8);
 }
+
+.theme-dark .messagesPopout-24nkyi {
+   background-color: transparent;
+}
+
 .botTagInvert-18-95s,
 .botTagRegular-2HEhHi {
   background: #789dbf !important;
@@ -1909,6 +1918,27 @@
   border-bottom: none!important;
   background: transparent;
 }
+
+.theme-dark .resultsGroup-r_nuzN:before {
+  border-top: none;
+}
+
+.h5-18_1nd {
+  color: silver;
+}
+
+.theme-dark .focused-2bY0OD{
+  background-color: rgba(0,0,0,0.3);
+}
+
+.theme-dark .queryContainer-RKFJW- {
+  color: white;
+  border-bottom-color: transparent;
+}
+
+
+
+
 
 /* RANDOM COLORS with BLACK OPACITY */
 /* Main Color: Black with Opacity */
