--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -678,6 +678,11 @@
   background-color: #129b1a;
 }
 
+.clickable-11uBi-:hover, 
+.selected-BYpGTS {
+  background:#129b1a;
+}
+
 .theme-dark .item-1Yvehc:hover {
   background: #04820C;
   color: #fff !important;
@@ -993,12 +998,16 @@
   background-color: transparent;
   box-shadow: none;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .messagesPopout-24nkyi {
+.theme-dark .messagesPopoutWrap-1MQ1bW {
   background: linear-gradient(50deg, rgba(0,0,0,0.6993172268907564) 30%, rgba(18, 155, 27,1) 100%);
   border: none;
   box-shadow: 0 7px 10px 0 rgba(0,0,0,.8);
 }
+
+.theme-dark .messagesPopout-24nkyi {
+   background-color: transparent;
+}
+
 .botTagInvert-18-95s,
 .botTagRegular-2HEhHi {
   background: #129b1a !important;
@@ -1937,6 +1946,25 @@
   border-bottom: none!important;
   background: transparent;
 }
+
+.theme-dark .resultsGroup-r_nuzN:before {
+  border-top: none;
+}
+
+
+.h5-18_1nd {
+  color: silver;
+}
+
+.theme-dark .focused-2bY0OD {
+  background-color: rgba(0,0,0,0.3);
+}
+
+.theme-dark .queryContainer-RKFJW- {
+  color: white;
+  border-bottom-color: transparent;
+}
+
 
 /* ONLY ONE COLOR AND HOVER COLOR CHALLENGE */
 /* Main Color: #129b1a - 18, 155, 26 */
