Upload Modal fix

--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -804,7 +804,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
   
 .uploadModal-2ifh8j {
-    background-image: linear-gradient(45deg, rgba(114, 142, 61, 0.633) 0%, rgba(0, 0, 0, 0.646) 100%), url(https://images3.alphacoders.com/744/744194.png);
+    background-image: linear-gradient(45deg, rgba(114, 142, 61, 0.633) 0%, rgba(0, 0, 0, 0.646) 100%), url(https://images6.alphacoders.com/992/992307.jpg);
     background-size: cover;
     border-radius: 5px;
 }
